--- a/practica2/index.html
+++ b/practica2/index.html
@@ -78,7 +78,7 @@
                 <img src="img/implementando/nadia1.JPG" alt=""  class="galeria_img">
                 <img src="img/implementando/ricardo2.JPG" alt=""  class="galeria_img">
                 <img src="img/implementando/brian3.JPG" alt=""  class="galeria_img">
-                <img src="img/implementando/lise1.JPG" alt=""  class="galeria_img">
+                <img src="img/implementando/lise1.jpg" alt=""  class="galeria_img">
             </div>
         </section>
 
