--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <main>
     <h2>Diseño Web - Assignment Portal</h2>
     <ul>
-      <li> Practica 1:<a href="#">Servidor Web </a></li> 
-      <li>Practica 2:<a href="practica2/index.html">css</a></li>
+      <li> Practica 1:<a href="#">Intro</a></li> 
+      <li>Practica 2:<a href="practica2/index.html">Layout css</a></li>
       
     </ul>
     
