--- a/practica1/index.html
+++ b/practica1/index.html
@@ -17,7 +17,8 @@
     <h2>Diseño Web - Assignment Portal</h2>
     <ul>
       <li> Practica 1:<a href="#">Intro</a></li> 
-      <li>Practica 2:<a href="practica2/index.html">Layout css</a></li>
+      <li>Practica 2:<a href="../practica2/index.html">Layout css</a></li>
+      <li> Practica 3:<a href="../practica3/index.html">javascript</a></li> 
       
     </ul>
     
