--- a/practica1/index.html
+++ b/practica1/index.html
@@ -19,6 +19,8 @@
       <li> Practica 1:<a href="#">Intro</a></li> 
       <li>Practica 2:<a href="../practica2/index.html">Layout css</a></li>
       <li> Practica 3:<a href="../practica3/index.html">javascript</a></li> 
+      <li> Proyecto-avance:<a href="../ProyectoFinal/html/index.html">primera parte</a></li> 
+      <li> Proyecto-avance2:<a href="../ProyectoFinal/html-css/index.html">segunda parte</a></li>
       <li> proyecto ProyectoFinal:<a href="../ProyectoFinal/html-css-js/index.html">html-css-js</a></li> 
       
     </ul>
